# Orin-Nano-Code

./: .gitignore  camera-setup.sh  emotion.py  emotions_FER.py  firmware_uno.ino  main.py  package-lock.json  prueba_servos.py  pyproject.toml  setup_orin.sh  test_arduino.py  test_audio.py  test_eyes_neck.py
.claude/: settings.local.json
arduino/: Demo_luces.ino  Demo_ultrasonidos.ino  SerialPortProtocol_Computer.py
arduino/ArduinoBoardFirmware/: ArduinoBoardFirmware.ino  BuzzerController.h  BuzzerController.ino  CommunicationPortocolDeclaration.h  ControllerDeclaration.h  Coordinator.h  Coordinator.ino  EyeController.h  EyeController.ino  EyesController.h  EyesController.ino  GeneralController.h  GeneralController.ino  HardwareDeclaration.h  LcdController.h  LcdController.ino  LedController.h  LedController.ino  MotorController.h  MotorController.ino  NeckController.h  PinDeclaration.h  (+6 more)
core/: arduino_hw_test.py  arduino_tester.py  audio_controller.py  blazeface_objectdetection.py  companion_behavior.py  emotions_2.py  face_detector.py  gc9a01_tester.py  holo_controller.py  object_classification_move.py  object_detection_mediapipe.py  object_detection_move.py  object_detection_yolo.py  object_detection_yolofaces.py  object_detection_yolofaces_streaming.py  port.py  scrfd_tensor_rt_computer_multicomp.py  servo_controller.py  stream_getter.py  tensorRT.md  tensor_rt.py  tensor_rt_computer.py  tensor_rt_computer_multicomp.py  tensor_rt_orin.py  udp_sender.py
tests/: conftest.py  test_audio_controller.py  test_port.py  test_servo_controller.py  test_teece_controller.py
(+53 files in other folders)
