[project]
name = "orin-nano-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyserial>=3.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
